2005-12-12  Michael Stucki  <michael@typo3.org>

	* Fixed wrong/missing label tags around radio input elements
	* Added new property "returnKey" to the split function - useful to get a specific element after a split operation

2005-12-10  Peter Niederlag  <peter@niederlag.de>

	* Fixed bug #1976: PHP5 type-conversion of string 'true' and boolean

2005-12-09  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #1354: Use mysql_real_escape_string() instead of addslashes() in t3lib_db to fix a security problem in t3lib->quoteStr() when magic_quotes_sybase = on
	* Added config.xhtmlDoctype ($GLOBALS['TSFE']->xhtmlDoctype and $GLOBALS['TSFE']->xhtmlVersion)

2005-12-03  Dmitry Dulepov  <typo3@fm-world.ru>

	* Added $BACK_PATH to $error_doc in t3lib_div::TCEmain->printLogErrorMessages() to work properly if current script runs outisde of ./typo3 directory

2005-12-01  Dmitry Dulepov  <typo3@fm-world.ru>

	* Implemented access check for workspace editing
	* Blinding for user and group names is implemented in workspace editing

2005-11-30  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed bug #0874: XHTML compliance of GMENU with onmouseover images
	* Fixed bug #1657: make default number of file upload forms in the file upload tool configurable
	* Fixed bug #1703: Date fields: default is tomorrow instead of today.
	* Fixed bug #1889: EM appends trailing spaces when updating ext_emconf.php
	* Changed shortcut checking behavior in t3lib_page::getMenu (Related to #1066)

2005-11-30  Michael Stucki  <michael@typo3.org>

	* Fixed a little bug in t3lib_div::debug() (missing <tr> after first row)

2005-11-29  Dmitry Dulepov  <typo3@fm-world.ru>

	* Workspace module uses own classes for editing/creating workspaces (no permission check yet!)
	* Better visual presentation for workspace list (added icons, ndashes, etc)

2005-11-28  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed spelling error (Bug #1945)